--- a/Evaluation Manager/Evaluation Manager.csproj
+++ b/Evaluation Manager/Evaluation Manager.csproj
@@ -67,6 +67,8 @@
     <Compile Include="model\Teacher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\StudentRepository.cs" />
+    <Compile Include="Repositories\StudentRepositoryHelpers.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
